logs/Slang/generated/hdlconv/hdlconvertor_p158.sv.log
name: hdlconvertor_p158
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p158.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p158.sv:1:1: error: language feature not yet supported
interface class PutImp#(type PUT_T = logic);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p158.sv:5:1: error: language feature not yet supported
interface class GetImp#(type GET_T = logic);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p158.sv:9:1: error: language feature not yet supported
class Fifo#(type T = logic, int DEPTH=1) implements PutImp#(T), GetImp#(T);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p158.sv:19:1: error: language feature not yet supported
class Stack#(type T = logic, int DEPTH=1) implements PutImp#(T), GetImp#(T);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
